<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/logo_project_management" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/name_task"
            />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@+id/item_name"
            />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_begin_date_max_end"
            android:layout_below="@+id/item_desc"
            />

        <TextView
            android:id="@+id/item_estimate_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_duration"
            android:layout_below="@+id/item_date"
            />

        <TextView
            android:id="@+id/item_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:layout_below="@+id/item_estimate_duration"
            />

    </RelativeLayout>

</LinearLayout>