<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/create_account_back_button"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/back_button"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45sp"/>

            <ImageView
                android:id="@+id/logo_project_management_corp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo_project_management"
                android:contentDescription="@string/desc_logo" />

            <ImageButton
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_alignParentEnd="true"
                android:visibility="invisible"
                android:clickable="false"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/identifient_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/connection_id"
            android:inputType="textVisiblePassword|textNoSuggestions"
            app:layout_constraintTop_toBottomOf="@+id/text_connection"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_create_account_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/connection_password"
            android:inputType="textPassword|textNoSuggestions"
            app:layout_constraintTop_toBottomOf="@+id/identifient"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_create_account_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/connection_password"
            android:inputType="textPassword|textNoSuggestions"
            app:layout_constraintTop_toBottomOf="@+id/identifient"
            android:autofillHints="" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintTop_toBottomOf="@+id/password_create_account_two"/>

    </LinearLayout>
</ScrollView>